# kiss_icp_localization

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  package.xml
config/: kiss_loc.rviz  mid360_localization.yaml
include/kiss_icp_localization/: adaptive_threshold.hpp  bev_detector.hpp  registration.hpp  se3.hpp  track_mask.hpp  voxel_hash_map.hpp
launch/: localization.launch.py  localization_v14.launch.py
src/: bev_detector.cpp  localization_node.cpp  registration.cpp  voxel_hash_map.cpp
test/: bag_validation.py  smoke_test.py  test_core.cpp
